# cloud_ml_platform

./: LICENSE  README.md
ml_infra/: .gitignore  Pulumi.yaml  S3ServiceAccount.ts  index.ts  package.json
ml_pipeline/: .dockerignore  .gitignore  Dockerfile  Makefile  pipeline.py  pyproject.toml
ml_pipeline/.github/workflows/: deploy.yml
ml_pipeline/conf/: config.yaml
ml_pipeline/data/.dvc/: config
ml_pipeline/data/raw/: iris.parquet.dvc
ml_pipeline/infra/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  TraefikRoute.ts  index.ts  package.json
ml_pipeline/src/serving/: __main__.py
ml_pipeline/src/training/: feature.py  train.py
ml_pipeline/tests/: test_mlflow.py
